Wed Dec 25 13:00:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: let mingw do something black-magic, and check if
	  _gmtime64_s() is available actually.

	* win32/win32.c (gmtime_s, localtime_s): use _gmtime64_s() and
	  _localtime64_s() if available, not depending on very confusing
	  mingw variants macros.  based on the patch by phasis68 (Heesob
	  Park) at [ruby-core:58764].  [ruby-core:58391] [Bug #9119]

Wed Dec 25 12:33:41 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* sample/trick2013/: added the award-winning entries of TRICK 2013.
	  See https://github.com/tric/trick2013 for the contest outline.
	  (Matz has approved the attachment.)

Wed Dec 25 10:42:02 2013  Yamashita Yuu  <yamashita@geishatokyo.com>

	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): Declare a constant
	  `OP_MSIE_SSLV2_RSA_PADDING` only if the macro is defined.  The
	  `SSL_OP_MSIE_SSLV2_RSA_PADDING` has been removed from latest
	  snapshot of OpenSSL 1.0.1.  [Fixes GH-488]

Wed Dec 25 01:03:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_local_variables): allowing binding to list its
	  local variables.  patch by Jack Danger Canty <jackdanger AT
	  squareup.com> at [ruby-core:56543].  [Feature #8773]

Tue Dec 24 23:20:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_ownership_user): new
	  assertion for user ownership.

	* test/fileutils/test_fileutils.rb (test_chown_error),
	  (test_chown_without_permission, test_chown_with_root):
	  based on the patch by vajrasky (Vajrasky Kok) at
	  [ruby-core:59298].  [Feature #9292]

Tue Dec 24 16:28:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_mod_define_method): consider visibility only if self
	  in the caller is same as the receiver, otherwise make public as
	  well as old behavior.  [ruby-core:57747] [Bug #9005]
	  [ruby-core:58497] [Bug #9141]

	* vm.c (rb_vm_cref_in_context): return ruby level cref if self is
	  same.
